--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-09 17:42:13
+lastsearch = 2024-08-09 18:38:31
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -51.9%%
+title = chăn nhung tuyết, chăn nhung loại dày size đại cao cấp ( 3kg
+url = https://shopee.vn/chăn-nhung-tuyết-chăn-nhung-loại-dày-size-đại-cao-cấp-(-3kg-4kg-5kg-)-i.442103984.12041087761
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [www.lazada.vn]
-match = -44.4%%
-title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/men-long-tuyet-thai/
+match = -11.1%%
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
 
 [tiki.vn]
 match = 11.1%%
