--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-09 17:21:29
+lastsearch = 2024-08-09 18:33:23
 
 [shopee.vn]
 match = 4.3%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoq-TYYiS8efcTCt6f3bwcAC3lLG1FXONaKBA-3Gj7UDbbalxAB1
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chuyenhangviet.com]
 match = -43.5%%
