--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-09 13:44:03
+lastsearch = 2024-08-09 18:24:50
 
 [shopee.vn]
 match = -152.6%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -121.1%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -100.0%%
+title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelinhchi.com]
 match = -89.5%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -173.7%%
-title = 30 Bài hát thiếu nhi bé ăn ngon ngủ ngon - Anh Phi Công Ơi ...
-url = https://www.youtube.com/watch?v=qVTTqOfNSJQ
+match = -142.1%%
+title = Bé Khỏe Bé Ngoan ♫ Mai Vy - Thần Đồng Âm Nhạc Việt Nam ...
+url = https://www.youtube.com/watch?v=rSwTEpTTNY8
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,12 +59,12 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoqe4OhlR8TWLfr98MoLojp-qjS5eQinjbnFz4w-e61Qug1TzcKK
 
 [tiki.vn]
-match = -110.5%%
-title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 8, 2024
-url = https://tiki.vn/search?q=chiếu tre
+match = -126.3%%
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
 
 [khodem.vn]
 match = -31.6%%
