--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 12:18:46
+lastsearch = 2024-08-09 18:35:06
 
 [shopee.vn]
 match = -40.7%%
-title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày cao ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-chiếu-điều-hòa-nhật-bản-loại-dày-cao-cấp-thông-minh-siêu-mát-và-siêu-thoáng-đủ-kích-thước-i.458989698.24414242012
+title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
 
 [demxanh.com]
 match = -14.8%%
@@ -59,7 +59,7 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 [sieuthidem.vn]
 match = 22.2%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorcQk1smAW8hTkS4D4kFZBbtw8wu60X_Niex-8mEQwafsQRf7j5
 
 [chieutrelanlan.com]
 match = 25.9%%
