--- a/images/chieu-dieu-hoa-lua-140x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-140x190/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190.html
 lastopen = 2024-08-08 17:47:40
 
 [search]
-lastsearch = 2024-06-20 14:29:50
+lastsearch = 2024-08-09 18:27:12
 
 [www.diepxuan.com]
-match = 30.8%%
-title = Điệp Xuân Chiếu điều hòa lụa 140x190 kèm gối
+match = 23.1%%
+title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
 
 [chieutrelanlan.com]
-match = 0.0%%
-title = Sang chảnh với chiếu lụa điều hòa 1m8
-url = https://chieutrelanlan.com/chieu-lua-dieu-hoa-1m8-62.html
+match = 30.8%%
+title = Chiếu mây điều hòa 3D kích thước 140x190cm
+url = https://chieutrelanlan.com/chieu-dieu-hoa-kich-thuoc-140x190cm-51.html
 
 [www.lazada.vn]
-match = 38.5%%
-title = Chiếu Lụa điều Hòa Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
+match = -15.4%%
+title = Chiếu điều hoà sợi mây- Chiếu Ngủ (140x190cm) hàng ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-soi-may-chieu-ngu-140x190cm-hang-vn-cao-cap-chat-luong-cao-thoang-mat-i2037665974.html
 
 [demxanh.com]
-match = -15.4%%
-title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
+match = 34.6%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [tiki.vn]
 match = -11.5%%
@@ -32,9 +32,9 @@ title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [shopee.vn]
-match = -34.6%%
-title = Chiếu Điều Hòa Viền Lụa Phong Anh Loại Dầy Sợi Mây ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Viền-Lụa-Phong-Anh-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.81313558.13044100887
+match = -73.1%%
+title = Chiếu điều hòa( lót lụa) sợi mây cao cấp . có chun cài góc , ...
+url = https://shopee.vn/Chiếu-điều-hòa(-lót-lụa)-sợi-mây-cao-cấp-.-có-chun-cài-góc-hàng-loại-1.-Ship-hỏa-tốc-i.184023281.17297249331
 
 [thegioidemviet.vn]
 match = -19.2%%
@@ -70,4 +70,9 @@ url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 match = 11.1%%
 title = Chiếu lụa điều hoà
 url = https://shopbecon.com/chieu-lua-dieu-hoa
+
+[www.youtube.com]
+match = 3.8%%
+title = Cận cảnh| Chiếu điều hòa mây viền lụa đẹp
+url = https://www.youtube.com/watch?v=ztkYWZCTIsA
 
