--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-09 16:47:07
+lastsearch = 2024-08-09 18:36:50
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -107.1%%
+title = In conversation with President Trump
+url = https://www.youtube.com/watch?v=blqIZGXWUpU
 
 [www.reddit.com]
 match = -64.3%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 0.0%%
-title = Blue Bayou (2021)
-url = https://www.imdb.com/title/tt11121664/
+match = -7.1%%
+title = The Green Mile (1999)
+url = https://www.imdb.com/title/tt0120689/
 
 [www.boundless.com]
 match = -128.6%%
@@ -475,4 +475,9 @@ url = https://www.forbes.com/sites/andyjsemotiuk/2023/01/11/why-eb-5-immigrant-i
 match = -92.9%%
 title = beongoan - Váy Xanh (Boy George Fan)
 url = https://twitter.com/beongoan?lang=en
+
+[health.clevelandclinic.org]
+match = -157.1%%
+title = 10 Foods That Help Ease Your Arthritis Pain
+url = https://health.clevelandclinic.org/top-10-foods-power-ease-arthritis-pain
 
