--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-09 13:51:17
+lastsearch = 2024-08-09 18:31:40
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -74,7 +74,7 @@ url = https://everon.online/products/dem-song-everon
 [everonxuankhieu.vn]
 match = -90.0%%
 title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOoqOTo4S-NvCx1bwIghcQGcMcywjzM-VBP0lBynV7b-QnR4DJWWG
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/
 
 [nemgiagoc.vn]
 match = -60.0%%
