--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-09 14:28:28
+lastsearch = 2024-08-09 18:29:15
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=6597760cc3157839&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjOxaq3seeHAxX0vokEHXfpL60QsZYEegQIVhAC
+url = https://www.google.com/search?sca_esv=4a03b7477bdd569e&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiXzbeg5-eHAxW-K1kFHRBhFZEQsZYEegQISRAC
 
 [produccionesitaca.es]
 match = -21.4%%
