--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-09 15:35:51
+lastsearch = 2024-08-09 18:35:46
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -52.2%%
@@ -72,9 +72,9 @@ title = My favorite young male actors between 18-35
 url = https://www.imdb.com/list/ls055304256/
 
 [www.reuters.com]
-match = -108.7%%
-title = Dutch police disperse anti-lockdown protesters in Amsterdam
-url = https://www.reuters.com/business/media-telecom/dutch-police-disperse-thousands-protesting-against-lockdown-measures-2022-01-02/
+match = -113.0%%
+title = Japan declares victory in effort to end government use of ...
+url = https://www.reuters.com/world/asia-pacific/japan-declares-victory-effort-end-government-use-floppy-disks-2024-07-03/
 
 [escholarship.mcgill.ca]
 match = 8.7%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -87.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
