--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-09 14:19:26
+lastsearch = 2024-08-09 18:28:33
 
 [shopee.vn]
 match = -52.4%%
@@ -34,7 +34,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -66.7%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOop82lAvs-57MLfqcvszRMhFllx4Q6Y_OGpKzL9CtLqaRlrpF-t4
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
 match = -90.5%%
