--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-09 18:34:05
+lastsearch = 2024-08-09 20:12:54
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = 5.9%%
 title = Bộ Ga Chun At-04 Giảm Giá - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/136/bo-he-everon?srsltid=AfmBOop9RPH-iN5yzT2qklPf95xjhqcm7hHt2CodYNx7YUMpf49oZtAx
+url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [tiki.vn]
 match = 29.4%%
@@ -84,7 +84,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 [demxanh.com]
 match = -2.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 04
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-04.html?srsltid=AfmBOoo3PFBFPWEjQ2AqLolmVss-Fy3fYQfAkmjuorh3yzi4ANaU7Vst
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-04.html
 
 [antbedding.com]
 match = 26.5%%
