--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-09 13:54:17
+lastsearch = 2024-08-09 20:01:10
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -137.5%%
-title = VCS LMHT - "Hai Thế Giới" quá đẹp! #VCSLMHT ...
-url = https://m.facebook.com/vcslmht/photos/hai-thế-giới-quá-đẹpvcslmht-vcs2024mùahè-foreverwestand/461709146766414/
+match = -212.5%%
+title = 16. Tạ Tử Thành tỉnh lại vào buổi sáng hôm sau, hắn vừa ...
+url = https://m.facebook.com/100078695363159/photos/493851199914721/
 
 [www.sjcallahabad.org]
 match = -212.5%%
