--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-09 19:33:06
+lastsearch = 2024-08-09 20:07:28
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOopDgPj8XnCtOAAcfrn-jye89jmwsV_8rRT9LCQNq8FvptwP5CMB
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooZ4sIYLAnq2p-Wb7aIuAUxDgQ4O7LqPj9oYB2KNCXuZY2f0QYV
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
