--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-09 13:49:30
+lastsearch = 2024-08-09 20:00:07
 
 [nemgiakho.com]
 match = 8.6%%
@@ -90,4 +90,9 @@ url = https://nem.vn/nem-cao-su-thien-nhien-lien-a-classic
 match = 0.0%%
 title = 
 url = https://baohatinh.vn/nem-cao-su-non-co-tot-khong-va-nhung-diem-manh-noi-troi-post263742.html
+
+[entershopping.vn]
+match = 31.4%%
+title = Đệm cao su Liên Á Classic - Hà Nội - chăn ga gối
+url = https://entershopping.vn/dem-cao-su-lien-a-classic.html
 
