--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-09 19:40:03
+lastsearch = 2024-08-09 19:58:20
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorRSLwhuajKytXiFyxWWHJYT1PFYEeSRRhk-uTjLkBPlgxv0vGG
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 44.4%%
 title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOoplaip4LlMHTCLCOSmNBfwb3BxkMIznpK0yTFi83N1Uw58dypT-
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html?srsltid=AfmBOopgUlUF-romxyIFnyFCVYGjDvt9Xr_9HNILgoW-r9QhgAzL-rZo
+url = https://demxanh.com/vo-goi.html
 
 [templeshalom.ca]
 match = 0.0%%
