--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-09 15:44:30
+lastsearch = 2024-08-09 20:30:45
 
 [shopee.vn]
 match = 56.2%%
@@ -52,8 +52,8 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -275.0%%
-title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
+match = -131.2%%
+title = Phu Rua National Park bird checklist - Avibase
 url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
