--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-09 16:42:35
+lastsearch = 2024-08-09 20:32:52
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 20.8%%
+title = Đệm Bông ép 2 mảnh Korea
+url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -37,9 +37,9 @@ title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
 url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -67,9 +67,9 @@ title = Jason Huynh (@jhuyner16) • Instagram photos and videos
 url = https://www.instagram.com/jhuyner16/?locale=怡+TG/飞机:@buth2788}wT4lf????????֤??ImGkE
 
 [www.facebook.com]
-match = 0.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
-url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
+match = -80.0%%
+title = Chợ trời online Bay Area | Vào khoảng tháng 2 tôi có nhận ...
+url = https://www.facebook.com/groups/chotroionlinebayarea/posts/vào-khoảng-tháng-2-tôi-có-nhận-được-1-cuộc-gọi-của-1-em-gái-nhờ-tôi-đưa-ra-sân-b/1500939343845976/
 
 [demviethome.vn]
 match = -40.0%%
@@ -77,14 +77,14 @@ title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
-match = -76.0%%
-title = Món Ngon Người Việt Houston | Các bạn ơi please giới ...
-url = https://m.facebook.com/groups/monngonnvh/posts/24721116307479699/
+match = -72.0%%
+title = Món Ngon Người Việt Houston | Mình muốn mua bột sắn ...
+url = https://m.facebook.com/groups/monngonnvh/posts/5430605216957430/
 
 [www.tiktok.com]
-match = -84.0%%
-title = Bay ơi tới lúc tui cũng có mặt tại Cửu Long, Tiêm Sa Chuỷ ...
-url = https://www.tiktok.com/@eat.withno/video/7391523861554138384
+match = -40.0%%
+title = Một hàng nộm bò khô ngon mở đêm ở khu Cầu Giấy
+url = https://www.tiktok.com/@ngdangdung/video/7285373555020139778
 
 [thegioidemonline.com]
 match = -36.0%%
