--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-09 14:26:21
+lastsearch = 2024-08-09 20:35:22
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -57,9 +57,9 @@ title = Spencer Behr, MD
 url = https://profiles.ucsf.edu/spencer.behr
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -165.0%%
+title = End binding-3 inhibitor activates regenerative program in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10591057/
 
 [profiles.ucla.edu]
 match = -41.7%%
@@ -387,9 +387,9 @@ title = Global Climate Change Impacts in the United States.
 url = https://www.nrc.gov/docs/ML1006/ML100601201.pdf
 
 [www.wcu.edu]
-match = -142.9%%
-title = E 3 O <
-url = https://www.wcu.edu/_files/academic-enrichment/UG_Catalog_91_92.pdf
+match = -15.0%%
+title = Western Carolina University
+url = https://www.wcu.edu/_files/academic-enrichment/UG_Catalog_07_08.pdf
 
 [www.elso.org]
 match = -115.0%%
